--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "thefirst",
+  "name": "axai-tech",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
-    "firebase": "^8.7.1",
+    "firebase": "^8.6.8",
+    "nodemailer": "^6.6.2",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
