--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "firebase": "^8.8.0",
     "node-sass": "^6.0.1",
     "nodemailer": "^6.6.2",
@@ -15,6 +16,7 @@
     "react-app": "^1.1.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
