--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "bootstrap-icons": "^1.5.0",
     "firebase": "^8.8.0",
     "node-sass": "^6.0.1",
-    "nodemailer": "^6.6.2",
+    "nodemailer": "^6.6.3",
     "react": "^17.0.2",
     "react-app": "^1.1.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
